--- a/scoop/templates/scoop/form_template.html
+++ b/scoop/templates/scoop/form_template.html
@@ -11,6 +11,8 @@
             {{ block.super }}
             <link rel="stylesheet" type="text/css" href="../../static/scoop/forms.css">
         {% endblock %}
+        {% block scripts %}
+        {% endblock %}
 </head>
 <body>
 
