--- a/scoop/templates/scoop/user_templates/child_profile.html
+++ b/scoop/templates/scoop/user_templates/child_profile.html
@@ -25,7 +25,7 @@
 <p>state: {{ dependant.state }}</p>
 <p>student ID: {{ dependant.studentID }}</p>
 <p>lunch ladle ID: {{ dependant.llID }}</p>
-<p>account_balance: {{ dependant.account_balance }}</p>
+<p>account_balance: {{ dependant.account_balance }}</p><a href="../account.html">Move funds</a>
 <p>notification_amount: {{ dependant.notification_amount }}</p>
 <p>banned ingredients: {{ dependant.banned }}</p>
 {% endif %}
