"continued work on cutting-board feature"

--- a/scoop/templates/scoop/base_home.html
+++ b/scoop/templates/scoop/base_home.html
@@ -43,5 +43,8 @@
         {% include 'scoop/footer.html' %}
     {% endblock %}
 
+    {% block postscripts %}
+    {% endblock %}
+
 </body>
 </html>
