--- a/scoop/templates/scoop/base_user.html
+++ b/scoop/templates/scoop/base_user.html
@@ -46,5 +46,7 @@
         {% include 'scoop/footer.html' %}
     {% endblock %}
 
+    {% block postscripts %}
+    {% endblock %}
 </body>
 </html>
